Minor changes to the website 1

--- a/css/main.scss
+++ b/css/main.scss
@@ -553,8 +553,8 @@ body {
         
                 img {
                     border-radius: 0;
-                    height: 100%;
-                    width: auto;
+                    height: auto;
+                    width: 100%;
                     transition: transform .5s ease;
                 }
     
