--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,11 @@
 @charset "UTF-8";
 /*!
+Theme Name: bageri
+Author: EASV Students
+Description: Description
+Version: 1.0.0
+*/
+/*!
  * Bootstrap  v5.3.0-alpha3 (https://getbootstrap.com/)
  * Copyright 2011-2023 The Bootstrap Authors
  * Licensed under MIT (https://github.com/twbs/bootstrap/blob/main/LICENSE)
@@ -12082,6 +12088,7 @@ body {
   background-color: var(--bs-primary-background);
   margin: 0 !important;
   padding: 0 !important;
+  font-family: "Houschka Rounded", sans-serif;
 }
 
 .pswp__caption {
@@ -12118,6 +12125,7 @@ body {
   justify-content: center;
   list-style-type: none;
   padding: 0;
+  margin: 0;
 }
 .header .header-navigation #primary-menu li {
   margin: 0 15px;
@@ -12466,8 +12474,8 @@ body {
 }
 .shop-categories-row .card-group a .shop-category img {
   border-radius: 0;
-  height: 100%;
-  width: auto;
+  height: auto;
+  width: 100%;
   transition: transform 0.5s ease;
 }
 .shop-categories-row .card-group a .shop-category:hover img {
@@ -12562,8 +12570,12 @@ body {
   background-color: var(--bs-primary-background);
   margin: 60px 0;
 }
-.address-contact-component .row {
+.address-contact-component .container {
+  padding: 0;
+}
+.address-contact-component .container .row {
   background-color: var(--bs-dark-green);
+  width: 100%;
 }
 .address-contact-component .address-contact-container {
   background-color: var(--bs-dark-green);
@@ -12588,14 +12600,12 @@ body {
   display: flex;
   justify-content: flex-start;
 }
-.address-contact-component .address-contact-container iframe {
-  filter: brightness(90%);
-}
 .address-contact-component .map-container {
   background-color: var(--bs-dark-green);
   padding: 0;
 }
 .address-contact-component .map-container iframe {
+  width: 100%;
   filter: brightness(90%);
 }
 
@@ -12969,6 +12979,16 @@ body {
 .shop-container .wp-block-woocommerce-cart .wc-block-components-product-name {
   color: var(--bs-primary);
   text-decoration: none;
+  font-size: 20px;
+}
+.shop-container .wp-block-woocommerce-cart .wc-block-components-product-metadata {
+  display: none;
+}
+.shop-container .wp-block-woocommerce-cart .wc-block-cart-item__quantity {
+  margin-top: 15px;
+}
+.shop-container .wp-block-woocommerce-cart .wc-block-cart-item__quantity .wc-block-cart-item__remove-link {
+  font-size: 18px !important;
 }
 .shop-container .wp-block-woocommerce-cart ins {
   background: var(--bs-lighter-text);
@@ -12996,6 +13016,9 @@ body {
 .shop-container .wp-block-woocommerce-checkout .wc-block-components-text-input input {
   border-radius: 0;
 }
+.shop-container .wp-block-woocommerce-checkout .wc-block-components-product-name {
+  font-size: 16px;
+}
 .shop-container .wp-block-woocommerce-checkout .wc-block-components-product-metadata__description {
   display: none;
 }
@@ -13011,9 +13034,11 @@ body {
   width: 50%;
   padding: 10px 25px;
   border-radius: 24px;
+  border-color: var(--bs-primary-background) !important;
   font-size: 18px;
   color: var(--bs-lighter-text);
   background-color: var(--bs-primary) !important;
+  box-shadow: none;
 }
 
 /****************** SHOP - CATEGORIES ******************/
@@ -13170,52 +13195,6 @@ body {
   -o-object-fit: cover;
      object-fit: cover;
 }
-.custom-cake-order-form-component .row .custom-cake-order-form-container {
-  /* form {
-      width: 95%;
-
-      h3 {
-          color: var(--bs-darker-text);
-          font-weight: bold;
-      }
-  }
-
-  .form-control{
-      border-radius: 0;
-      height: 40px;
-      background-color: white;
-      border-color: var(--bs-dark-green);
-      letter-spacing: 0px;
-      color: var(--bs-darker-text);
-      padding: 6px 12px;
-  }
-
-  .form-select {
-      border-radius: 0;
-      height: 40px;
-      background-color: white;
-      border-color: var(--bs-dark-green);
-      letter-spacing: 0px;
-      color: var(--bs-darker-text);
-  }
-
-  #infoInput {
-      height: 128px;
-  }
-
-  .form-button-container{
-      width: 100%;
-
-      a {
-          .btn-primary{
-              width: 100%;
-              padding: 10px 25px;
-              border-radius: 25px;
-          }
-
-      }
-  } */
-}
 .custom-cake-order-form-component .row .custom-cake-order-form-container .custom-cake-order-form-content-container .wpforms-container {
   width: 95%;
   margin: 0;
@@ -13313,39 +13292,6 @@ body {
 }
 .message-form-component .row {
   padding: 20px 0;
-  /* .contact-form-container {
-
-      form {
-          width: 60%;
-      }
-
-      .form-control{
-          border-radius: 0;
-          height: 40px;
-          background-color: white;
-          border-color: var(--bs-dark-green);
-          letter-spacing: 0px;
-          color: var(--bs-darker-text);
-          padding: 6px 12px;
-      }
-
-      #messageInput {
-          height: 128px;
-      }
-
-      .form-button-container{
-          width: 100%;
-
-          a {
-              .btn-primary{
-                  width: 100%;
-                  padding: 10px 25px;
-                  border-radius: 25px;
-              }
-
-          }
-      }
-  } */
 }
 .message-form-component .row .wpforms-container {
   width: 60%;
@@ -13396,6 +13342,9 @@ body {
   color: var(--bs-darker-text);
   font-weight: bold;
   margin-bottom: 25px;
+}
+.contact-map-component iframe {
+  width: 100%;
 }
 
 /****************** TERMS AND CODITIONS ******************/
