--- a/css/main.scss
+++ b/css/main.scss
@@ -1,4 +1,10 @@
-// Custom.scss
+/*!
+Theme Name: bageri
+Author: EASV Students
+Description: Description
+Version: 1.0.0
+*/
+
 // Option A: Include all of Bootstrap
 
 // Include any default variable overrides here (though functions won't be available)
@@ -61,6 +67,7 @@ body {
     background-color: var(--bs-primary-background);
     margin: 0!important;
     padding: 0!important;
+    font-family: 'Houschka Rounded', sans-serif;
 }
 
 .pswp__caption {
@@ -100,6 +107,7 @@ body {
             justify-content: center;
             list-style-type: none;
             padding: 0;
+            margin: 0;
     
             li {
                 margin: 0 15px;
@@ -673,8 +681,13 @@ body {
     background-color: var(--bs-primary-background);
     margin: 60px 0;
 
-    .row {
-        background-color: var(--bs-dark-green);
+    .container {
+        padding: 0;
+
+        .row {
+            background-color: var(--bs-dark-green);
+            width: 100%;
+        }
     }
 
     .address-contact-container{
@@ -702,10 +715,6 @@ body {
                 justify-content: flex-start;
             }
         }
-
-        iframe {
-            filter: brightness(90%);
-        }
     }
 
     .map-container{
@@ -713,6 +722,7 @@ body {
         padding: 0;
 
         iframe {
+            width: 100%;
             filter: brightness(90%);
         }
     }
@@ -1179,6 +1189,19 @@ body {
         .wc-block-components-product-name {
             color: var(--bs-primary);
             text-decoration: none;
+            font-size: 20px;
+        }
+
+        .wc-block-components-product-metadata {
+            display: none;
+        }
+
+        .wc-block-cart-item__quantity {
+            margin-top: 15px;
+
+            .wc-block-cart-item__remove-link {
+                font-size: 18px!important;
+            }
         }
 
         ins {
@@ -1221,6 +1244,10 @@ body {
             }
         }
 
+        .wc-block-components-product-name {
+            font-size: 16px;
+        }
+
         .wc-block-components-product-metadata__description {
             display: none;
         }
@@ -1239,9 +1266,11 @@ body {
             width: 50%;
             padding: 10px 25px;
             border-radius: 24px;
+            border-color: var(--bs-primary-background)!important;
             font-size: 18px;
             color: var(--bs-lighter-text);
             background-color: var(--bs-primary)!important;
+            box-shadow: none;
         }
     }
 }
@@ -1495,51 +1524,6 @@ body {
                     }
                 }
             }
-            
-            /* form {
-                width: 95%;
-
-                h3 {
-                    color: var(--bs-darker-text);
-                    font-weight: bold;
-                }
-            }
-            
-            .form-control{
-                border-radius: 0;
-                height: 40px;
-                background-color: white;
-                border-color: var(--bs-dark-green);
-                letter-spacing: 0px;
-                color: var(--bs-darker-text);
-                padding: 6px 12px;
-            }
-
-            .form-select {
-                border-radius: 0;
-                height: 40px;
-                background-color: white;
-                border-color: var(--bs-dark-green);
-                letter-spacing: 0px;
-                color: var(--bs-darker-text);
-            }
-            
-            #infoInput {
-                height: 128px;
-            }
-
-            .form-button-container{
-                width: 100%;
-
-                a {
-                    .btn-primary{
-                        width: 100%;
-                        padding: 10px 25px;
-                        border-radius: 25px;
-                    }
-    
-                }
-            } */
         }
     }
 }
@@ -1652,40 +1636,6 @@ body {
                 border-color: #7a603a;
             }
         }
-
-        /* .contact-form-container {
-
-            form {
-                width: 60%;
-            }
-            
-            .form-control{
-                border-radius: 0;
-                height: 40px;
-                background-color: white;
-                border-color: var(--bs-dark-green);
-                letter-spacing: 0px;
-                color: var(--bs-darker-text);
-                padding: 6px 12px;
-            }
-            
-            #messageInput {
-                height: 128px;
-            }
-
-            .form-button-container{
-                width: 100%;
-
-                a {
-                    .btn-primary{
-                        width: 100%;
-                        padding: 10px 25px;
-                        border-radius: 25px;
-                    }
-    
-                }
-            }
-        } */
     }
 }
 
@@ -1710,6 +1660,10 @@ body {
                 margin-bottom: 25px;
             }
         }
+    }
+
+    iframe {
+        width: 100%;
     }
 }
 
